[Preetham B S] ADDED - Forget password and reset password API functionalities
