# src/controllers/user.controller.ts
@@ -1,6 +1,7 @@
 import HttpStatus from 'http-status-codes';
 import userService from '../services/user.service';
 import { Request, Response, NextFunction } from 'express';
+import { sendEmail } from '../utils/user.util';
 
 class UserController {
   public UserService = new userService();
@@ -30,6 +31,39 @@ class UserController {
       });
     } catch (error) {
       res.status(HttpStatus.UNAUTHORIZED).send(error.message);
+    }
+  };
+
+  // Forget password
+  public forgetPassword = async (req: Request, res: Response, next: NextFunction): Promise<any> => {
+    try {
+      const { email } = req.body;
+      const token = await this.UserService.forgetPassword(email);
+
+      // Send token via email
+      await sendEmail(email, token);
+
+      res.status(HttpStatus.OK).json({
+        code: HttpStatus.OK,
+        message: 'Reset token sent to email successfully',
+      });
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  // Reset password
+  public resetPassword = async (req: Request, res: Response, next: NextFunction): Promise<any> => {
+    try {
+      const { token, newPassword } = req.body;
+      await this.UserService.resetPassword(token, newPassword);
+
+      res.status(HttpStatus.OK).json({
+        code: HttpStatus.OK,
+        message: 'Password reset successfully',
+      });
+    } catch (error) {
+      next(error);
     }
   };
 
